# dask-expr

./: .gitignore  README.md  codecov.yml  demo.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: conda.yml  dask_test.yaml  pre-commit.yml  test.yaml
ci/: environment.yml  environment_released.yml
ci/recipe/: meta.yaml
dask_expr/: __init__.py  _accessor.py  _backends.py  _categorical.py  _collection.py  _concat.py  _core.py  _cumulative.py  _diagnostics.py  _expr.py  _groupby.py  _indexing.py  _merge.py  _merge_asof.py  _quantile.py  _quantiles.py  _reductions.py  _repartition.py  _resample.py  _rolling.py  _shuffle.py  _str_accessor.py  _util.py  _utils.py  _version.py  accessor.py  acessor.py  align.py  array.py  backends.py  categorical.py  collection.py  concat.py  datasets.py  expr.py  frame.py  frameexpr.py  groupby.py  merge.py  metadata.py  (+4 more)
dask_expr/array/: __init__.py  blockwise.py  core.py  random.py  rechunk.py  reductions.py  slicing.py
dask_expr/array/tests/: test_array.py
dask_expr/diagnostics/: _analyze.py  _analyze_plugin.py  _explain.py
dask_expr/io/: __init__.py  _delayed.py  arrow.py  bag.py  csv.py  hdf.py  io.py  json.py  orc.py  parquet.py  records.py  sql.py
dask_expr/io/tests/: test_delayed.py  test_distributed.py  test_from_pandas.py  test_io.py  test_parquet.py  (+1 more)
dask_expr/tests/: _util.py  test_align_partitions.py  test_array.py  test_categorical.py  test_collection.py  test_concat.py  test_datasets.py  test_distributed.py  test_fusion.py  test_groupby.py  test_indexing.py  test_map_partitions_overlap.py  test_merge.py  test_meta.py  test_partitioning_knowledge.py  test_quantiles.py  test_reductions.py  test_repartition.py  test_resample.py  test_reshape.py  test_reuse.py  test_rolling.py  test_shuffle.py  test_string_accessor.py  test_ufunc.py  test_util.py
dask_match/: __init__.py  collection.py  core.py  dataframe.py  datasets.py  expr.py  reductions.py  repartition.py  shuffle.py  utils.py
dask_match/collection/: __init__.py  core.py
dask_match/expr/: __init__.py  core.py  reductions.py
dask_match/io/: __init__.py  csv.py  io.py  parquet.py
dask_match/tests/: test_collection.py  test_core.py  test_dataframe.py  test_datasets.py  test_shuffle.py
(+12 files in other folders)
